# Orthopedic-Robot-Navigation

./: .gitignore  README.md  example_build_script
apps/Carm_PolarisMarker_Calibration/carm_calibration_handeye/: CMakeLists.txt  carm_calibration_handeye_main.cpp  handeye_carm_source_to_fiducial_main.cpp
apps/Carm_PolarisMarker_Calibration/carm_calibration_polaris_jig_pnp/: CMakeLists.txt  carm_calibration_polaris_jig_pnp_main.cpp  jhmr_carm_polaris_pnp_main.cpp
apps/Carm_Xray_Simulation/: CMakeLists.txt
apps/Carm_Xray_Simulation/create_disk_data/: CMakeLists.txt  xreg_gen_create_disk_data_main.cpp
apps/Carm_Xray_Simulation/create_disk_data_fromh5/: CMakeLists.txt  xreg_gen_create_disk_data_fromh5_main.cpp
apps/Carm_Xray_Simulation/create_h5_data/: CMakeLists.txt  xreg_gen_create_h5_data_main.cpp
apps/Carm_Xray_Simulation/create_ipcai_label_h5/: CMakeLists.txt  xreg_gen_create_ipcai_label_h5_main.cpp
apps/Carm_Xray_Simulation/create_vol_h5/: CMakeLists.txt  xreg_gen_create_vol_h5_main.cpp
apps/Carm_Xray_Simulation/disk_images_to_h5/: CMakeLists.txt  xreg_gen_disk_images_to_h5_main.cpp
apps/Carm_Xray_Simulation/export_ipcai_xform/: CMakeLists.txt  xreg_export_ipcai_xform_main.cpp
apps/Carm_Xray_Simulation/initial_pelvis_pose_estimate/: xreg_initial_pelvis_pose_estimate_main.cpp.cpp
apps/Carm_Xray_Simulation/preproc_deepdrr/: CMakeLists.txt  xreg_gen_preproc_deepdrr_main.cpp
apps/Femoroplasty/: CMakeLists.txt  README.md
apps/Femoroplasty/apply_femur_seg_to_CT/: CMakeLists.txt
apps/Femoroplasty/device_bb_pnp/: CMakeLists.txt  device_bb_pnp_main.cpp
apps/Femoroplasty/device_femur_regi_multiview/: CMakeLists.txt  device_femur_regi_multiview_main.cpp
apps/Femoroplasty/device_handeye_calibration/: CMakeLists.txt
apps/Femoroplasty/device_multiconfig_singleview/: CMakeLists.txt
apps/Femoroplasty/device_regi_singleview/: CMakeLists.txt
apps/Femoroplasty/femoroplasty_regi_multiview_femur/: CMakeLists.txt
apps/Femoroplasty/femoroplasty_regi_multiview_pelvis_and_femur/: femoroplasty_regi_multiview_pelvis_and_femur_main.cpp
apps/Femoroplasty/femoroplasty_regi_singleview_femur/: CMakeLists.txt  femoroplasty_regi_singleview_femur_main.cpp
apps/Femoroplasty/femoroplasty_regi_singleview_pelvis_and_femur/: CMakeLists.txt
apps/Femoroplasty/femur_regi_singleview/: femur_regi_singleview_main.cpp
apps/Femoroplasty/flip_seg/: CMakeLists.txt  flip_seg_main.cpp
apps/Femoroplasty/injection_device_registration/: CMakeLists.txt
apps/Femoroplasty/jhmr_fem_regi_fem_singleview/: jhmr_fem_regi_fem_singleview_main.cpp
apps/Femoroplasty/pelvis_femur_regi_multiview/: CMakeLists.txt  pelvis_femur_regi_multiview_main.cpp
apps/Femoroplasty/pelvis_femur_registration/: CMakeLists.txt
apps/Femoroplasty/phantom_drilling/: CMakeLists.txt
apps/Femoroplasty/pre_processing/: CMakeLists.txt
apps/Generalization/: CMakeLists.txt
apps/Generalization/create_disk_data/: CMakeLists.txt  xreg_gen_create_disk_data_main.cpp
apps/Generalization/create_disk_data_fromh5/: xreg_gen_create_disk_data_fromh5_main.cpp
apps/Generalization/create_h5_data/: CMakeLists.txt  xreg_gen_create_h5_data_main.cpp  xreg_gen_create_h5_data_main_backup.cpp
apps/Generalization/create_vol_h5/: CMakeLists.txt
apps/Generalization/disk_images_to_h5/: CMakeLists.txt
apps/Generalization/initial_pelvis_pose_estimate/: CMakeLists.txt
apps/Robotic_Injection_Device/device_handeye_calibration/: CMakeLists.txt  device_handeye_calibration_main.cpp
apps/Spine/: CMakeLists.txt
apps/Spine/cal_FK_Injector_StyroBase/: CMakeLists.txt  cal_FK_Injector_StyroBase_main.cpp
apps/Spine/cmd/: cmd.sh  cmd_device_multiview.sh  cmd_device_singleview.sh  cmd_multiconfig.sh  cmd_spine_multiview.sh  cmd_spine_singleview.sh
apps/Spine/device_InjectorPolaris_handeye_reproj_bb/: CMakeLists.txt  device_InjectorPolaris_handeye_reproj_bb_main.cpp
apps/Spine/device_bb_pnp/: CMakeLists.txt  device_bb_pnp_main.cpp
apps/Spine/device_handeye_reproj_bb/: CMakeLists.txt  device_handeye_reproj_bb_main.cpp
apps/Spine/device_multiconfig_optimhandeye/: CMakeLists.txt  device_multiconfig_optimhandeye_main.cpp
apps/Spine/device_multiconfig_singleview/: CMakeLists.txt  device_multiconfig_singleview_main.cpp
apps/Spine/device_regi_multiview/: CMakeLists.txt  device_regi_multiview_main.cpp
apps/Spine/device_regi_singleview/: CMakeLists.txt  device_regi_singleview_main.cpp
apps/Spine/device_sim_multiconfig_multiview/: CMakeLists.txt  device_sim_multiconfig_multiview_main.cpp  jhmr_fem_regi_device_multiconfig_singleview_main.cpp
apps/Spine/device_sim_multiconfig_singleview/: device_sim_multiconfig_singleview_main.cpp
apps/Spine/handeye_AXYB/: CMakeLists.txt  handeye_AXYB_main.cpp
apps/Spine/include/: xregRecomposeVertebraes.h
apps/Spine/polaris_handeye_remap/: CMakeLists.txt  polaris_handeye_remap_main.cpp
apps/Spine/spine_regi_multiview/: CMakeLists.txt  spine_regi_multiview_main.cpp
apps/Spine/spine_regi_multiview_vertb/: ._CMakeLists.txt  ._spine_regi_multiview_vertb_main.cpp  CMakeLists.txt  spine_regi_multiview_vertb_main.cpp
apps/Spine/spine_regi_singleview/: CMakeLists.txt  spine_regi_singleview_main.cpp
apps/Spine/spine_regi_singleview_fluoro_for_Ben/: CMakeLists.txt  spine_regi_singleview_fluoro_for_Ben_main.cpp
apps/Spine/spine_regi_singleview_for_Ben/: CMakeLists.txt  spine_regi_singleview_for_Ben_main.cpp
apps/Spine/spine_regi_singleview_vertb/: ._CMakeLists.txt  ._spine_regi_singleview_vertb_main.cpp  CMakeLists.txt  spine_regi_singleview_vertb_main.cpp
apps/Spine/spine_sim_regi_multiview/: CMakeLists.txt  spine_sim_regi_multiview_main.cpp
lib/bigssMath/: CMakeLists.txt  bigssKinematicsUtils-inl.h  bigssKinematicsUtils.cpp  bigssKinematicsUtils.h  bigssMath.cpp  bigssMath.h  bigssMathEigen.cpp  bigssMathEigen.h  bigss_debug_util.cpp  bigss_debug_util.h  eigenAddons.h  eigenMatrixAddons.h  interpolatingSpline.cpp  interpolatingSpline.h  slicerUtil.cpp  slicerUtil.h  smoothingSpline.cpp  smoothingSpline.h  spline.h  test.cpp  testSmoothingSpline.cpp  transformTest.cpp
(+128 files in other folders)
