add_subdirectory(initial_pelvis_pose_estimate)
add_subdirectory(create_h5_data)
add_subdirectory(create_disk_data)
add_subdirectory(create_disk_data_fromh5)
add_subdirectory(disk_images_to_h5)
add_subdirectory(create_vol_h5)
add_subdirectory(create_ipcai_label_h5)
add_subdirectory(preproc_deepdrr)
add_subdirectory(export_ipcai_xform)
