add_subdirectory(femur_regi_singleview)
add_subdirectory(pelvis_femur_regi_multiview)
add_subdirectory(device_regi_singleview)
#add_subdirectory(femur_regi_singleview)
#add_subdirectory(device_femur_regi_multiview)
add_subdirectory(device_bb_pnp)
add_subdirectory(femoroplasty_regi_singleview_pelvis_and_femur)
add_subdirectory(femoroplasty_regi_multiview_pelvis_and_femur)
add_subdirectory(femoroplasty_regi_singleview_femur)
add_subdirectory(femoroplasty_regi_multiview_femur)
add_subdirectory(apply_femur_seg_to_CT)
add_subdirectory(flip_seg)
#add_subdirectory(device_multiconfig_singleview)
#add_subdirectory(device_handeye_calibration)
