add_subdirectory(device_regi_singleview)
add_subdirectory(device_multiconfig_singleview)
add_subdirectory(device_bb_pnp)
add_subdirectory(spine_regi_singleview)
add_subdirectory(spine_regi_multiview)
add_subdirectory(device_handeye_reproj_bb)
add_subdirectory(device_multiconfig_optimhandeye)
add_subdirectory(device_regi_multiview)
