include_directories(include)

add_subdirectory(device_regi_singleview)
add_subdirectory(device_multiconfig_singleview)
add_subdirectory(device_bb_pnp)
add_subdirectory(spine_regi_singleview)
add_subdirectory(spine_regi_multiview)
add_subdirectory(device_handeye_reproj_bb)
add_subdirectory(device_InjectorPolaris_handeye_reproj_bb)
add_subdirectory(device_multiconfig_optimhandeye)
add_subdirectory(device_regi_multiview)
add_subdirectory(polaris_handeye_remap)
add_subdirectory(cal_FK_Injector_StyroBase)
add_subdirectory(spine_sim_regi_singleview)
add_subdirectory(spine_sim_regi_multiview)
add_subdirectory(device_sim_multiconfig_multiview)
add_subdirectory(spine_sim_regi_singleview_vertb)
add_subdirectory(spine_sim_regi_multiview_vertb)
add_subdirectory(spine_sim_result)
add_subdirectory(spine_regi_singleview_for_Ben)
add_subdirectory(spine_regi_singleview_fluoro_for_Ben)
#add_subdirectory(handeye_AXYB)
