cmake_minimum_required(VERSION 2.8)

include_directories(common)
include_directories(tbme-common)

add_subdirectory(jhmr_fem_handeye_drill_regi)
add_subdirectory(jhmr_fem_regi_fem_singleview)
add_subdirectory(jhmr_fem_handeye_drill_AXYB)
add_subdirectory(jhmr_fem_regi_device_femur_multiview)
add_subdirectory(jhmr_fem_target_URkinematics)
add_subdirectory(jhmr_fem_xform_regi_to_planning)

